- Fix ajax tables on Safari - Icons on tables

--- a/bennu-core/web/javaScript/dataTables/media/css/demo_table.css
+++ b/bennu-core/web/javaScript/dataTables/media/css/demo_table.css
@@ -73,6 +73,10 @@
 	text-align: right;
 }
 
+.saviourDiv {
+	height: 20px;
+}
+
 /* Pagination nested */
 .paginate_disabled_previous, .paginate_enabled_previous, .paginate_disabled_next, .paginate_enabled_next {
 	height: 19px;
